src/snapshots/afrotd__parser__tests__interpretation_9.2.1_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 1
index: 5
text: "2. und 7 von der B-30. Nose Guard B55 hat sich beim Snap\nin der neutralen Zone aufgestellt. Back A22 erhält den Handoff als er\ndurch die Mitte stürmt. Er läuft sich frei und advanct weiter in Richtung\nGoalline. An der B-10 dreht er sich und streckt provozierend den Ball\ndem ihn verfolgenden B91 entgegen. Anschließend dreht sich A22 wieder und überquert mit dem Ball die Goalline."
ruling: "Unsportliches\nVerhalten, Defense Offside. Die Fouls heben sich auf, der Down wird\nwiederholt. A’s Ball, 2. und 7 von der B-30."
