src/snapshots/afrotd__parser__tests__interpretation_9.2.1_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 1
index: 6
text: "1. und 10 von der 50. Der Quarterback wirft einen Rückpass auf\nBack A44, der sich nach rechts dreht und in Richtung Goalline stürmt.\nDer Linejudge, der dem Spielgeschehen folgt, wirft eine Flagge, weil Linebacker B57 ihn mit beleidigenden Obszönitäten überhäuft und sich\nbeschwert, er wäre vom Tight End festgehalten worden. A44 erzielt\neinen Touchdown."
ruling: "Live Ball Foul für unsportliches Verhalten durch B57. Die Strafe wird, je nach Team A’s Wahl, entweder auf\nden Try oder den anschließenden Kickoff übertragen."
