src/snapshots/afrotd__parser__tests__interpretation_9.2.2_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 2
index: 2
text: "Beim vierten Down von der B-12 betritt A1 das Spielfeld mit einem Kicking-Tee, während seine anderen 11 Mitspieler sich im Huddle befinden. A1 kniet und misst die Entfernung von der neutralen Zone zum Kick-Punkt. Während seine Mitspieler das Huddle verlassen,\nverlässt A1 mit dem Tee das Feld. Team A führt schnell ein Laufspiel\ndurch."
ruling: "Strafe – 15 Meter vom Previous Spot. Es soll keine\nAuswechselung von Spielern vorgetäuscht werden, um einen Gegner\nzu verwirren, und ein Spieler, der mit anderen kommuniziert, muss für\neinen Down im Spiel bleiben."
