src/snapshots/afrotd__parser__tests__interpretation_9.2.2_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 2
index: 4
text: "Während sich ein Team bereit macht, ein Fieldgoal durchzuführen, geht der potentielle Holder zu seiner Teamzone und fragt nach\ndem Kicking Tee. Das Tee wird auf das Feld geworfen und der Spieler, der sich in Richtung seiner Teamzone bewegt hatte, läuft nach dem\nSnap downfield. Der Ball wird zu dem Spieler gesnappt, der sich in der\nKickposition befand, und dieser wirft einen Pass zu dem Spieler, der\nnach dem Tee gefragt hatte."
ruling: Strafe – 15 Meter vom Previous Spot.
