src/snapshots/afrotd__parser__tests__interpretation_9.2.2_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 2
index: 5
text: "Team A hat sich in einer Scrimmage Kick Formation aufgestellt\nund stand für eine Sekunde still. Einer der Offense Backs ruft A40, dem\nBlocker auf der rechten Seite zu, dass er vom Feld gehen soll. A40\nbewegt sich in Richtung der Seitenlinie. Beim Snap läuft A40 downfield\nund wird zu einem Pass-Receiver."
ruling: "Unsportliches Verhalten.\n15 Meter vom Previous Spot. Das ist eine Taktik im Zusammenhang mit\ndem Auswechselprozess, um die Gegner zu verwirren."
