src/snapshots/afrotd__parser__tests__interpretation_9.2.2_7.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 2
index: 7
text: "4. und 1 von der B-40. QB A12 bewegt sich aus einer ShotgunFormation nach vorne hinter den Center und ruft Signale im vergeblichen Versuch, Team B ins Offside zu locken. Bei 10 Sekunden verbleibend auf der Play Clock löst sich A12 von seiner Position und joggt in\nRichtung seiner Seitenlinie. Dabei gestikuliert er vehement mit seinen\nArmen und winkt in Richtung der Ersatzbank. Als A12 fast die Seitenlinie erreicht hat, wird der Ball, unmittelbar bevor die Play Clock ausläuft,\ndirekt zu Back A44 gesnapt und A44 advanct bis zu der B-38, wo er getackelt wird."
ruling: "A’s Ball, 4. und 16 von der A-45. Unsportliches\nVerhalten. Team A wird mit einer 15-Meterstrafe vom Previous Spot belegt. Die Aktion von A12 widerspricht dem Geist der Regel 9.2.2.b."
